--- a/resources/views/account/wishlist.twig
+++ b/resources/views/account/wishlist.twig
@@ -9,41 +9,64 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<form action="#">
-					<!--=======  wishlist table  =======-->
+				{%if list|length > 0%}
+					<form action="#">
+						<!--=======  wishlist table  =======-->
 
-					<div class="cart-table table-responsive">
-						<table class="table">
-							<thead>
-							<tr>
-								<th class="pro-thumbnail">{{trans('Plentymarket::WebAccountCart.image')}}</th>
-								<th class="pro-title">{{trans('Plentymarket::WebAccountCart.product')}}</th>
-								<th class="pro-price">{{trans('Plentymarket::WebAccountCart.price')}}</th>
-								<th class="pro-vat">{{trans('Plentymarket::WebAccountCart.vat')}}</th>
-								<th class="pro-remove">{{trans('Plentymarket::WebAccountCart.remove')}}</th>
-							</tr>
-							</thead>
-							<tbody>
-							{%for item in list%}
+						<div class="cart-table table-responsive">
+							<table class="table">
+								<thead>
 								<tr>
-									<td class="pro-thumbnail">
-										<a href="/index/product/{{item.id}}"><img src="{{item.images.0}}" class="img-fluid" alt="Product"></a>
-									</td>
-									<td class="pro-title"><a href="/index/product/{{item.id}}">{{item.name}}</a></td>
-									<td class="pro-price"><span>{{item.format_discount_price}}</span></td>
-									<td class="pro-vat"><span>{{item.vat_price}}</span></td>
-									<td class="pro-remove" data-id="{{item.variationId}}">
-										<a href="#"><i class="fa fa-trash-o"></i></a>
-									</td>
+									<th class="pro-thumbnail">{{trans('Plentymarket::WebAccountCart.image')}}</th>
+									<th class="pro-title">{{trans('Plentymarket::WebAccountCart.product')}}</th>
+									<th class="pro-price">{{trans('Plentymarket::WebAccountCart.price')}}</th>
+									<th class="pro-vat">{{trans('Plentymarket::WebAccountCart.vat')}}</th>
+									<th class="pro-remove">{{trans('Plentymarket::WebAccountCart.remove')}}</th>
 								</tr>
-							{%endfor%}
-							</tbody>
-						</table>
+								</thead>
+								<tbody>
+								{%for item in list%}
+									<tr>
+										<td class="pro-thumbnail">
+											<a href="/index/product/{{item.id}}"><img src="{{item.images.0}}" class="img-fluid" alt="Product"></a>
+										</td>
+										<td class="pro-title"><a href="/index/product/{{item.id}}">{{item.name}}</a></td>
+										<td class="pro-price"><span>{{item.format_discount_price}}</span></td>
+										<td class="pro-vat"><span>{{item.vat_price}}</span></td>
+										<td class="pro-remove" data-id="{{item.variationId}}">
+											<a href="#"><i class="fa fa-trash-o"></i></a>
+										</td>
+									</tr>
+								{%endfor%}
+								</tbody>
+							</table>
+						</div>
+
+						<!--=======  End of wishlist table  =======-->
+
+					</form>
+				{%else%}
+					<div class="cart empty">
+						<div class="page-title" style="border-bottom: 1px solid #000;">
+							<h1>{{trans('Plentymarket::WebAccountWishlist.wishlist')}}</h1>
+						</div>
+						<div class="cart-empty">
+							<p style="background-color: #fefad7;
+    padding: 15px;
+    margin-top: 15px;font-size: 14px;
+    font-weight: 400;">{{trans('Plentymarket::WebAccountWishlist.wishlist_empty_desc')}}</p>
+							<div class="buttons-set">
+								<a href="/" title="{{trans('Plentymarket::WebAccountWishlist.continue')}}" class="checkout-btn" style="font-weight: 400;
+    text-transform: uppercase;
+    color: #ffffff;
+    background-color: #1e1e1e;
+    border-color: #1e1e1e;    padding: 15px;">
+									<span class="button_label">{{trans('Plentymarket::WebAccountWishlist.continue')}}</span>
+								</a>
+							</div>
+						</div>
 					</div>
-
-					<!--=======  End of wishlist table  =======-->
-
-				</form>
+				{%endif%}
 			</div>
 		</div>
 	</div>
