--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1498,8 +1498,8 @@ a.scroll-top {
 
 .cart-empty
 {
-  text-align: center;
-  padding: 20px;
+  text-align: left;
+  padding: 0px;
 }
 
 @media only screen and (max-width: 479px)
