--- a/resources/views/index/blog-list.twig
+++ b/resources/views/index/blog-list.twig
@@ -47,72 +47,53 @@
 				<div class="blog-post-container mb-15">
 
 					<div class="row">
-						<div class="col-lg-4 col-md-6">
-							<!--=======  single blog post  =======-->
 
-							<div class="single-blog-post mb-35">
-								<div class="row">
-									<div class="col-lg-12">
-										<div class="single-blog-post-media mb-20">
-											<div class="image">
-												<a href="blog-post-image-format.html"><img src="assets/images/blog-image/01.jpg" class="img-fluid" alt=""></a>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-12">
-										<div class="single-blog-post-content">
-											<h3 class="post-title"><a href="blog-post-image-format.html"> The biggest
-													lie in furniture</a></h3>
-											<div class="post-meta">
-												<p><span><i class="fa fa-user-circle"></i> </span> <a href="#">admin</a>
-													<span class="separator">/</span>
-													<span><i class="fa fa-calendar"></i> <a href="#">24 August, 2018</a></span>
-												</p>
-											</div>
+						{%for item in list%}
+							<div class="col-lg-4 col-md-6">
+								<!--=======  single blog post  =======-->
 
-											<p class="post-excerpt">
-												Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu
-												ex. Aenean posuere libero eu augue condimentum rhoncus.
-											</p>
-											<a href="blog-post-image-format.html" class="blog-readmore-btn">continue
-												<i class="fa fa-long-arrow-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
+								<div class="single-blog-post gallery-type-post mb-35">
+									<div class="row">
+										<div class="col-lg-12">
 
-							<!--=======  End of single blog post  =======-->
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<!--=======  single blog post  =======-->
+											{%if item.images|length > 1%}
 
-							<div class="single-blog-post gallery-type-post mb-35">
-								<div class="row">
-									<div class="col-lg-12">
-										<div class="single-blog-post-media mb-20">
-											<div class="blog-image-gallery">
-												<div class="single-image">
-													<a href="blog-post-image-gallery.html"><img src="assets/images/blog-image/02.jpg" class="img-fluid" alt=""></a>
+												<div class="single-blog-post-media mb-20">
+													<div class="blog-image-gallery">
+														<div class="single-image">
+															<a href="blog-post-image-gallery.html"><img src="assets/images/blog-image/02.jpg" class="img-fluid" alt=""></a>
+														</div>
+
+														<div class="single-image">
+															<a href="blog-post-image-gallery.html"><img src="assets/images/blog-image/01.jpg" class="img-fluid" alt=""></a>
+														</div>
+
+														<div class="single-image">
+															<a href="blog-post-image-gallery.html"><img src="assets/images/blog-image/03.jpg" class="img-fluid" alt=""></a>
+														</div>
+													</div>
 												</div>
-
-												<div class="single-image">
-													<a href="blog-post-image-gallery.html"><img src="assets/images/blog-image/01.jpg" class="img-fluid" alt=""></a>
+											{%else%}
+												<div class="single-blog-post-media mb-20">
+													<div class="image">
+														<a href="blog-post-image-format.html"><img src="assets/images/blog-image/01.jpg" class="img-fluid" alt=""></a>
+													</div>
 												</div>
+											{%endif%}
 
-												<div class="single-image">
-													<a href="blog-post-image-gallery.html"><img src="assets/images/blog-image/03.jpg" class="img-fluid" alt=""></a>
-												</div>
-											</div>
 										</div>
-									</div>
-									<div class="col-lg-12">
-										<div class="single-blog-post-content">
-											<h3 class="post-title"><a href="blog-post-image-gallery.html"> How to
-													improve furniture quality</a></h3>
-											<div class="post-meta">
-												<p><span><i class="fa fa-user-circle"></i> </span> <a href="#">admin</a>
-													<span class="separator">/</span>
-													<span><i class="fa fa-calendar"></i> <a href="#">24 August, 2018</a></span>
+										<div class="col-lg-12">
+											<div class="single-blog-post-content">
+												<h3 class="post-title"><a href="blog-post-image-gallery.html"> How to
+												                                                               improve
+												                                                               furniture
+												                                                               quality</a>
+												</h3>
+												<div class="post-meta">
+													<p><span><i class="fa fa-user-circle"></i> </span>
+														<a href="#">admin</a>
+														<span class="separator">/</span>
+														<span><i class="fa fa-calendar"></i> <a href="#">24 August, 2018</a></span>
 												</p>
 											</div>
 
@@ -120,246 +101,17 @@
 												Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu
 												ex. Aenean posuere libero eu augue condimentum rhoncus.
 											</p>
-											<a href="blog-post-image-gallery.html" class="blog-readmore-btn">continue
-												<i class="fa fa-long-arrow-right"></i></a>
+												<a href="blog-post-image-gallery.html" class="blog-readmore-btn">continue
+													<i class="fa fa-long-arrow-right"></i></a>
+											</div>
 										</div>
 									</div>
 								</div>
+
+								<!--=======  End of single blog post  =======-->
 							</div>
+						{%endfor%}
 
-							<!--=======  End of single blog post  =======-->
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<!--=======  single blog post  =======-->
-
-							<div class="single-blog-post mb-35">
-								<div class="row">
-									<div class="col-lg-12">
-										<div class="single-blog-post-media mb-20">
-											<div class="post-audio embed-responsive embed-responsive-16by9">
-												<iframe class="embed-responsive-item" width="500" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/182537870&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-12">
-										<div class="single-blog-post-content">
-											<h3 class="post-title"><a href="blog-post-audio-format.html"> 101 ideas for
-													furniture</a></h3>
-
-											<div class="post-meta">
-												<p><span><i class="fa fa-user-circle"></i> </span> <a href="#">admin</a>
-													<span class="separator">/</span>
-													<span><i class="fa fa-calendar"></i> <a href="#">24 August, 2018</a></span>
-												</p>
-											</div>
-
-											<p class="post-excerpt">
-												Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu
-												ex. Aenean posuere libero eu augue condimentum rhoncus.
-											</p>
-											<a href="blog-post-audio-format.html" class="blog-readmore-btn">continue
-												<i class="fa fa-long-arrow-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!--=======  End of single blog post  =======-->
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<!--=======  single blog post  =======-->
-
-							<div class="single-blog-post mb-35">
-								<div class="row">
-									<div class="col-lg-12">
-										<div class="single-blog-post-media mb-20">
-											<div class="video embed-responsive embed-responsive-16by9">
-												<iframe class="embed-responsive-item" width="560" src="https://www.youtube.com/embed/tvPnrfQCiCo" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-											</div>
-
-										</div>
-									</div>
-									<div class="col-lg-12">
-										<div class="single-blog-post-content">
-											<h3 class="post-title"><a href="blog-post-video-format.html"> No more
-													mistakes with furniture</a></h3>
-											<div class="post-meta">
-												<p><span><i class="fa fa-user-circle"></i> </span> <a href="#">admin</a>
-													<span class="separator">/</span>
-													<span><i class="fa fa-calendar"></i><a href="#">24 August, 2018</a></span>
-												</p>
-											</div>
-
-											<p class="post-excerpt">
-												Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu
-												ex. Aenean posuere libero eu augue condimentum rhoncus.
-											</p>
-											<a href="blog-post-video-format.html" class="blog-readmore-btn">continue
-												<i class="fa fa-long-arrow-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!--=======  End of single blog post  =======-->
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<!--=======  single blog post  =======-->
-
-							<div class="single-blog-post mb-35">
-								<div class="row">
-									<div class="col-lg-12">
-										<div class="single-blog-post-media mb-20">
-											<div class="image">
-												<a href="blog-post-image-format.html"><img src="assets/images/blog-image/01.jpg" class="img-fluid" alt=""></a>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-12">
-										<div class="single-blog-post-content">
-											<h3 class="post-title"><a href="blog-post-image-format.html"> The biggest
-													lie in furniture</a></h3>
-											<div class="post-meta">
-												<p><span><i class="fa fa-user-circle"></i> </span> <a href="#">admin</a>
-													<span class="separator">/</span>
-													<span><i class="fa fa-calendar"></i> <a href="#">24 August, 2018</a></span>
-												</p>
-											</div>
-
-											<p class="post-excerpt">
-												Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu
-												ex. Aenean posuere libero eu augue condimentum rhoncus.
-											</p>
-											<a href="blog-post-image-format.html" class="blog-readmore-btn">continue
-												<i class="fa fa-long-arrow-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!--=======  End of single blog post  =======-->
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<!--=======  single blog post  =======-->
-
-							<div class="single-blog-post gallery-type-post mb-35">
-								<div class="row">
-									<div class="col-lg-12">
-										<div class="single-blog-post-media mb-20">
-											<div class="blog-image-gallery">
-												<div class="single-image">
-													<a href="blog-post-image-gallery.html"><img src="assets/images/blog-image/02.jpg" class="img-fluid" alt=""></a>
-												</div>
-
-												<div class="single-image">
-													<a href="blog-post-image-gallery.html"><img src="assets/images/blog-image/01.jpg" class="img-fluid" alt=""></a>
-												</div>
-
-												<div class="single-image">
-													<a href="blog-post-image-gallery.html"><img src="assets/images/blog-image/03.jpg" class="img-fluid" alt=""></a>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-12">
-										<div class="single-blog-post-content">
-											<h3 class="post-title"><a href="blog-post-image-gallery.html"> How to
-													improve furniture quality</a></h3>
-											<div class="post-meta">
-												<p><span><i class="fa fa-user-circle"></i> </span> <a href="#">admin</a>
-													<span class="separator">/</span>
-													<span><i class="fa fa-calendar"></i> <a href="#">24 August, 2018</a></span>
-												</p>
-											</div>
-
-											<p class="post-excerpt">
-												Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu
-												ex. Aenean posuere libero eu augue condimentum rhoncus.
-											</p>
-											<a href="blog-post-image-gallery.html" class="blog-readmore-btn">continue
-												<i class="fa fa-long-arrow-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!--=======  End of single blog post  =======-->
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<!--=======  single blog post  =======-->
-
-							<div class="single-blog-post mb-35">
-								<div class="row">
-									<div class="col-lg-12">
-										<div class="single-blog-post-media mb-20">
-											<div class="post-audio embed-responsive embed-responsive-16by9">
-												<iframe class="embed-responsive-item" width="500" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/182537870&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-											</div>
-										</div>
-									</div>
-									<div class="col-lg-12">
-										<div class="single-blog-post-content">
-											<h3 class="post-title"><a href="blog-post-audio-format.html"> 101 ideas for
-													furniture</a></h3>
-
-											<div class="post-meta">
-												<p><span><i class="fa fa-user-circle"></i> </span> <a href="#">admin</a>
-													<span class="separator">/</span>
-													<span><i class="fa fa-calendar"></i> <a href="#">24 August, 2018</a></span>
-												</p>
-											</div>
-
-
-											<p class="post-excerpt">
-												Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu
-												ex. Aenean posuere libero eu augue condimentum rhoncus.
-											</p>
-											<a href="blog-post-audio-format.html" class="blog-readmore-btn">continue
-												<i class="fa fa-long-arrow-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!--=======  End of single blog post  =======-->
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<!--=======  single blog post  =======-->
-
-							<div class="single-blog-post mb-35">
-								<div class="row">
-									<div class="col-lg-12">
-										<div class="single-blog-post-media mb-20">
-											<div class="video embed-responsive embed-responsive-16by9">
-												<iframe class="embed-responsive-item" width="560" src="https://www.youtube.com/embed/tvPnrfQCiCo" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-											</div>
-
-										</div>
-									</div>
-									<div class="col-lg-12">
-										<div class="single-blog-post-content">
-											<h3 class="post-title"><a href="blog-post-video-format.html"> No more
-													mistakes with furniture</a></h3>
-											<div class="post-meta">
-												<p><span><i class="fa fa-user-circle"></i> </span> <a href="#">admin</a>
-													<span class="separator">/</span>
-													<span><i class="fa fa-calendar"></i><a href="#">24 August, 2018</a></span>
-												</p>
-											</div>
-
-											<p class="post-excerpt">
-												Donec vitae hendrerit arcu, sit amet faucibus nisl. Cras pretium arcu
-												ex. Aenean posuere libero eu augue condimentum rhoncus.
-											</p>
-											<a href="blog-post-video-format.html" class="blog-readmore-btn">continue
-												<i class="fa fa-long-arrow-right"></i></a>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!--=======  End of single blog post  =======-->
-						</div>
 					</div>
 				</div>
 
