--- a/resources/views/account/cart.twig
+++ b/resources/views/account/cart.twig
@@ -120,7 +120,7 @@
 									</h2>
 								</div>
 								<div class="cart-summary-button">
-									<button class="checkout-btn">{{trans('Plentymarket::WebAccountCart.checkout')}}</button>
+									<a class="checkout-btn" href="/account/checkout">{{trans('Plentymarket::WebAccountCart.checkout')}}</a>
 									<button class="update-btn">{{trans('Plentymarket::WebAccountCart.update_cart')}}</button>
 								</div>
 							</div>
