--- a/resources/views/account/checkout.twig
+++ b/resources/views/account/checkout.twig
@@ -16,87 +16,51 @@
 
 						<div class="col-lg-7 mb-20">
 
-							<!-- Billing Address -->
+							<!-- Shipping Address -->
 							<div id="billing-form" class="mb-40">
-								<h4 class="checkout-title">Billing Address</h4>
-
+								<h4 class="checkout-title">Shipping Address</h4>
 								<div class="row">
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>First Name*</label>
-										<input type="text" placeholder="First Name">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Last Name*</label>
-										<input type="text" placeholder="Last Name">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Email Address*</label>
-										<input type="email" placeholder="Email Address">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Phone no*</label>
-										<input type="text" placeholder="Phone number">
-									</div>
-
-									<div class="col-12 mb-20">
-										<label>Company Name</label>
-										<input type="text" placeholder="Company Name">
-									</div>
-
-									<div class="col-12 mb-20">
-										<label>Address*</label>
-										<input type="text" placeholder="Address line 1">
-										<input type="text" placeholder="Address line 2">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Country*</label>
-										<select class="nice-select">
-											<option>Bangladesh</option>
-											<option>China</option>
-											<option>country</option>
-											<option>India</option>
-											<option>Japan</option>
-										</select>
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Town/City*</label>
-										<input type="text" placeholder="Town/City">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>State*</label>
-										<input type="text" placeholder="State">
-									</div>
-
-									<div class="col-md-6 col-12 mb-20">
-										<label>Zip Code*</label>
-										<input type="text" placeholder="Zip Code">
-									</div>
-
-									<div class="col-12 mb-20">
-										<div class="check-box">
-											<input type="checkbox" id="create_account">
-											<label for="create_account">Create an Acount?</label>
+									<div class="address-list col-md-12 col-12 mb-20">
+										<div class="address selected">
+											<div class="address-name">
+												Alex Tuntuni
+											</div>
+											<div class="address-address">
+												1355 Market St, Suite 900 San Francisco, CA 94103
+											</div>
+											<div class="address-mobile">
+												(123) 456-7890
+											</div>
+											<button class="address-select">
+												使用这个地址
+											</button>
 										</div>
-										<div class="check-box">
-											<input type="checkbox" id="shiping_address" data-shipping>
-											<label for="shiping_address">Ship to Different Address</label>
+
+										<div class="address">
+											<div class="address-name">
+												Alex Tuntuni
+											</div>
+											<div class="address-address">
+												1355 Market St, Suite 900 San Francisco, CA 94103
+											</div>
+											<div class="address-mobile">
+												(123) 456-7890
+											</div>
+											<button class="address-select">
+												使用这个地址
+											</button>
 										</div>
 									</div>
-
+									<div class="col-md-12 col-12 mb-20">
+										<button class="create-address">添加一个新地址</button>
+									</div>
 								</div>
 
 							</div>
 
 							<!-- Shipping Address -->
 							<div id="shipping-form" class="mb-40">
-								<h4 class="checkout-title">Shipping Address</h4>
+								<h4 class="checkout-title">New Address</h4>
 
 								<div class="row">
 
@@ -157,6 +121,10 @@
 										<input type="text" placeholder="Zip Code">
 									</div>
 
+								</div>
+
+								<div class="col-md-12 col-12 mb-20">
+									<button class="save-address">保存</button>
 								</div>
 
 							</div>
@@ -202,41 +170,46 @@
 											<input type="radio" id="payment_check" name="payment-method" value="check">
 											<label for="payment_check">Check Payment</label>
 											<p data-method="check">Please send a Check to Store name with Store Street,
-												Store Town, Store State, Store Postcode, Store Country.</p>
+											                       Store Town, Store State, Store Postcode, Store
+											                       Country.</p>
 										</div>
 
 										<div class="single-method">
 											<input type="radio" id="payment_bank" name="payment-method" value="bank">
 											<label for="payment_bank">Direct Bank Transfer</label>
 											<p data-method="bank">Please send a Check to Store name with Store Street,
-												Store Town, Store State, Store Postcode, Store Country.</p>
+											                      Store Town, Store State, Store Postcode, Store
+											                      Country.</p>
 										</div>
 
 										<div class="single-method">
 											<input type="radio" id="payment_cash" name="payment-method" value="cash">
 											<label for="payment_cash">Cash on Delivery</label>
 											<p data-method="cash">Please send a Check to Store name with Store Street,
-												Store Town, Store State, Store Postcode, Store Country.</p>
+											                      Store Town, Store State, Store Postcode, Store
+											                      Country.</p>
 										</div>
 
 										<div class="single-method">
 											<input type="radio" id="payment_paypal" name="payment-method" value="paypal">
 											<label for="payment_paypal">Paypal</label>
 											<p data-method="paypal">Please send a Check to Store name with Store Street,
-												Store Town, Store State, Store Postcode, Store Country.</p>
+											                        Store Town, Store State, Store Postcode, Store
+											                        Country.</p>
 										</div>
 
 										<div class="single-method">
 											<input type="radio" id="payment_payoneer" name="payment-method" value="payoneer">
 											<label for="payment_payoneer">Payoneer</label>
 											<p data-method="payoneer">Please send a Check to Store name with Store
-												Street, Store Town, Store State, Store Postcode, Store Country.</p>
+											                          Street, Store Town, Store State, Store Postcode,
+											                          Store Country.</p>
 										</div>
 
 										<div class="single-method">
 											<input type="checkbox" id="accept_terms">
 											<label for="accept_terms">I’ve read and accept the terms &
-												conditions</label>
+											                          conditions</label>
 										</div>
 
 									</div>
