--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -278,6 +278,8 @@
 
 <script src="{{plugin_path("Plentymarket")}}/js/spop.min.js"></script>
 
+<script src="{{plugin_path("Plentymarket")}}/js/jquery.validate.min.js"></script>
+
 <script type="text/javascript">
     spop.defaults = {
         autoclose: 5000,
