--- a/resources/views/account/checkout.twig
+++ b/resources/views/account/checkout.twig
@@ -101,7 +101,7 @@
 									</div>
 
 									<div class="col-md-6 col-12 mb-20">
-										<label>Zip Code*</label>
+										<label>Zip Code</label>
 										<input type="text" placeholder="Zip Code" name="zipcode">
 									</div>
 
@@ -214,6 +214,9 @@
                 }
             },
             country: {
+                required: true
+            },
+            state: {
                 required: true
             },
             town: {
