--- a/resources/views/account/checkout.twig
+++ b/resources/views/account/checkout.twig
@@ -206,7 +206,7 @@
         {
             if (response.code == 1)
             {
-                $("bdoy").append(response.data.html);
+                $("body").append(response.data.html);
             }
             else
             {
